# mtc

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/controlplane/: Cargo.toml
crates/controlplane/src/: background.rs  launcher.rs  main.rs  router.rs  settings.rs
crates/controlplane/src/router/: machines.rs  nodes.rs  state.rs  ui.rs
crates/controlplane/ui/: app.js  index.html  styles.css
crates/worker/: Cargo.toml
crates/worker/src/: background.rs  main.rs  settings.rs
