[package]
name = "cmd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mtc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
common = { path = "../common" }
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
