[package]
name = "controlplane"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mtccontrolplane"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15"
common = { path = "../common" }
